--- a/train-controller/build.gradle
+++ b/train-controller/build.gradle
@@ -1,7 +1,4 @@
-plugins {
-    id "org.sonarqube" 
-    version "2.2"
-}
+plugins {     id "org.sonarqube" version "2.2"   }
 dependencies {
     compile project(':train-interfaces')
 }
